--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&family=Caprasimo&family=Dancing+Script:wght@500&family=Delicious+Handrawn&family=Electrolize&family=Freehand&family=Gruppo&family=IBM+Plex+Mono:wght@700&family=Montserrat:wght@600&family=Nosifer&family=Open+Sans:wght@300&family=Pacifico&family=Ubuntu&family=Zeyada&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">  
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;800&family=Noto+Serif:wght@400;700&family=Bebas+Neue:wght@400&family=PT+Serif:wght@400;700&display=swap">
     <title>SRI MEGALA KALAIKUDAM</title>
   </head>
   <body>
